--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,9 +18,7 @@ h3,
 h4,
 h5,
 h6,
-p,
-ol,
-ul {
+p {
     margin: 0;
     padding: 0;
     font-weight: normal;
@@ -28,7 +26,7 @@ ul {
 
 ol,
 ul {
-    list-style: none;
+    list-style: square inside;
 }
 
 img {
