Commenting nonsense to test git

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,5 @@
 /* Minimal CSS Reset from: https://alligator.io/css/minimal-css-reset/ */
+/* This is a comment to test git stuff */
 
 html {
     box-sizing: border-box;
